@@ -12,13 +12,15 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.locales>zh_CN</project.build.locales>
-        <spring.boot.version>1.5.21.RELEASE</spring.boot.version>
+        <spring.boot.version>2.2.0.RELEASE</spring.boot.version>
         <java.version>1.8</java.version>
         <project.build.jdk>${java.version}</project.build.jdk>
-        <hsweb.framework.version>3.0.9-SNAPSHOT</hsweb.framework.version>
+        <hsweb.framework.version>4.0.0-SNAPSHOT</hsweb.framework.version>
         <hsweb.expands.version>3.0.2</hsweb.expands.version>
-        <lettuce.plus.version>1.0.0-SNAPSHOT</lettuce.plus.version>
-        <jetlinks.version>1.0.0-RC2-SNAPSHOT</jetlinks.version>
+        <lettuce.plus.version>1.0.0-RC2-SNAPSHOT</lettuce.plus.version>
+        <jetlinks.version>1.0.0-BUILD-SNAPSHOT</jetlinks.version>
+        <reactor.version>Dysprosium-RELEASE</reactor.version>
+        <r2dbc.version>Arabba-RC2</r2dbc.version>
     </properties>
 
     <build>
@@ -47,6 +49,23 @@
         </pluginManagement>
 
         <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
+                <configuration>
+                    <mainClass>org.jetlinks.platform.JetLinksApplication</mainClass>
+                    <layout>ZIP</layout>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -133,7 +152,7 @@
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.2.0</version>
                 <configuration>
-                    <imageName>jetlinks/${project.artifactId}</imageName>
+                    <imageName>registry.cn-shenzhen.aliyuncs.com/jetlinks/${project.artifactId}</imageName>
                     <imageTags>
                         <imageTag>${project.version}</imageTag>
                     </imageTags>
@@ -144,8 +163,6 @@
                         <APP_JAR>/${project.build.finalName}.jar</APP_JAR>
                     </env>
                     <entryPoint>["/docker-entrypoint.sh"]</entryPoint>
-                    <!--<entryPoint>["java","-jar -server -XX:+UseG1GC $JAVA_OPTS /${project.build.finalName}.jar"]</entryPoint>-->
-                    <!--<entryPoint>java -jar $JAVA_OPTS -server -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:-OmitStackTraceInFastThrow -Djava.security.egd=file:/dev/./urandom /${project.build.finalName}.jar</entryPoint>-->
                     <resources>
                         <resource>
                             <targetPath>/</targetPath>
@@ -166,22 +183,11 @@
 
     <dependencyManagement>
         <dependencies>
-            <dependency>
-                <groupId>org.jetlinks</groupId>
-                <artifactId>rule-engine-cluster</artifactId>
-                <version>${jetlinks.version}</version>
-            </dependency>
 
             <dependency>
                 <groupId>io.vavr</groupId>
                 <artifactId>vavr</artifactId>
                 <version>0.9.2</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>1.1.18</version>
             </dependency>
 
             <dependency>
@@ -194,41 +200,13 @@
                 <artifactId>logging-interceptor</artifactId>
                 <version>3.13.1</version>
             </dependency>
-            <dependency>
-                <groupId>io.projectreactor</groupId>
-                <artifactId>reactor-core</artifactId>
-                <version>3.2.10.RELEASE</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.jetlinks</groupId>
-                <artifactId>lettuce-plus-spring</artifactId>
-                <version>${lettuce.plus.version}</version>
-            </dependency>
-
-
-            <dependency>
-                <groupId>org.jetlinks</groupId>
-                <artifactId>lettuce-plus-spring</artifactId>
-                <version>${lettuce.plus.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.redisson</groupId>
-                <artifactId>redisson</artifactId>
-                <version>3.10.6</version>
-            </dependency>
 
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>1.2.3</version>
             </dependency>
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>1.1.14</version>
-            </dependency>
+
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
@@ -262,18 +240,6 @@
             </dependency>
 
             <dependency>
-                <groupId>org.hswebframework</groupId>
-                <artifactId>hsweb-easy-orm-rdb</artifactId>
-                <version>3.0.6-SNAPSHOT</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.hswebframework</groupId>
-                <artifactId>hsweb-easy-orm-core</artifactId>
-                <version>3.0.6-SNAPSHOT</version>
-            </dependency>
-
-            <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty-bom</artifactId>
                 <version>4.1.32.Final</version>
@@ -284,22 +250,89 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.0-jre</version>
+        </dependency>
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>6.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-elastic</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetlinks</groupId>
+            <artifactId>rule-engine-cluster</artifactId>
+            <version>${jetlinks.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>dev.miku</groupId>
+            <artifactId>r2dbc-mysql</artifactId>
+            <version>0.8.0.BUILD-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.hswebframework.web</groupId>
-            <artifactId>hsweb-commons-service-simple</artifactId>
+            <artifactId>hsweb-starter</artifactId>
             <version>${hsweb.framework.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hswebframework.web</groupId>
-            <artifactId>hsweb-commons-dao-mybatis</artifactId>
+            <artifactId>hsweb-system-file</artifactId>
             <version>${hsweb.framework.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hswebframework.web</groupId>
-            <artifactId>hsweb-commons-controller</artifactId>
+            <artifactId>hsweb-system-dictionary</artifactId>
+            <version>${hsweb.framework.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot.experimental</groupId>
+            <artifactId>spring-boot-starter-data-r2dbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.r2dbc</groupId>
+            <artifactId>r2dbc-h2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.r2dbc</groupId>
+            <artifactId>r2dbc-postgresql</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hswebframework.web</groupId>
+            <artifactId>hsweb-commons-crud</artifactId>
             <version>${hsweb.framework.version}</version>
         </dependency>
 
@@ -315,11 +348,6 @@
             <version>${jetlinks.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.jetlinks</groupId>
-            <artifactId>jetlinks-registry-redis</artifactId>
-            <version>${jetlinks.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.jetlinks</groupId>
@@ -329,72 +357,76 @@
 
         <dependency>
             <groupId>org.jetlinks</groupId>
-            <artifactId>lettuce-plus-spring</artifactId>
+            <artifactId>jetlinks-supports</artifactId>
+            <version>${jetlinks.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetlinks</groupId>
+            <artifactId>lettuce-plus-core</artifactId>
             <version>${lettuce.plus.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.hswebframework.web</groupId>
-            <artifactId>hsweb-spring-boot-starter</artifactId>
+            <artifactId>hsweb-system-authorization-default</artifactId>
             <version>${hsweb.framework.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.hswebframework.web</groupId>
-            <artifactId>hsweb-concurrent-cache</artifactId>
+            <artifactId>hsweb-authorization-basic</artifactId>
+            <version>${hsweb.framework.version}</version>
+
+        </dependency>
+
+        <dependency>
+            <groupId>org.hswebframework.web</groupId>
+            <artifactId>hsweb-system-authorization-api</artifactId>
             <version>${hsweb.framework.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-indexer</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>com.zaxxer</groupId>-->
+<!--            <artifactId>HikariCP</artifactId>-->
+<!--            <version>3.3.1</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-undertow</artifactId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-logging</artifactId>
+            <groupId>io.searchbox</groupId>
+            <artifactId>jest</artifactId>
         </dependency>
 
         <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>3.3.1</version>
+            <groupId>org.hswebframework</groupId>
+            <artifactId>hsweb-easy-orm-elasticsearch</artifactId>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.influxdb</groupId>-->
+<!--            <artifactId>influxdb-java</artifactId>-->
+<!--            <version>2.15</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.8.5</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.1.9</version>
         </dependency>
 
         <dependency>
@@ -433,9 +465,8 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <version>1.0.2.Final</version>
+            <groupId>org.hswebframework</groupId>
+            <artifactId>hsweb-easy-orm-rdb</artifactId>
         </dependency>
 
     </dependencies>
@@ -456,6 +487,13 @@
                 <updatePolicy>always</updatePolicy>
             </snapshots>
         </repository>
+
+        <repository>
+            <id>spring.io</id>
+            <name>spring</name>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+
     </repositories>
 
     <distributionManagement>
